Fix search in dark mode, meta links & last updated

--- a/blog/.vuepress/styles/index.styl
+++ b/blog/.vuepress/styles/index.styl
@@ -67,6 +67,10 @@ h5, h6 {
   .meta {
     margin-top: -1.15rem;
     font-style: italic;
+    color: var(--btcpay-body-text);
+  }
+  .meta-link {
+    color: var(--btcpay-nav-link-accent);
   }
   .index-post-title {
     border: none;
@@ -86,6 +90,15 @@ h5, h6 {
   }
   .theme-default-content img {
     margin: 1rem auto;
+  }
+  .suggestions {
+    background-color: var(--btcpay-header-bg);
+  }
+  .suggestion.focused {
+    background-color: var(--btcpay-body-bg-hover);
+  }
+  .last-updated .prefix {
+    color: var(--btcpay-light-text);
   }
 }
 
